# goit-python-web-hw2-poetry

./: .dockerignore  Dockerfile  README.md  adapter.py  address_book.py  commander.py  fabrique.py  main.py  pyproject.toml  requirements.txt
commands/: __init__.py  add.py  load.py  save.py  search.py  sortie.py  view.py
fields/: __init__.py  email.py  name.py  phone.py  record.py
